@@ -1,3 +1,7 @@
+2011-05-17 Lorenzo Natale <lorenzo.natale@iit.it>
+    * CMakeLists.txt:
+    - workaround for cmake 2.6.0 in checking YARP version
+
 2011-05-13 Lorenzo Natale <lorenzo.natale@iit.it>
     * CMakeLists.txt:
     - enable strict check of YARP version
